Make button IDs more readable and fix syntax error regarding JS for New Book button.

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h1 {
     font-size: 50px;
 }
 
-#new-book {
+#new-book-button {
     width: 50%;
     height: 100%;
     justify-self: right;
@@ -146,7 +146,7 @@ form label {
     margin-bottom: 60px;
 }
 
-#submit {
+#submit-button {
     width: 200px;
     height: 50px;
     font-size: xx-large;
